--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,59 @@
   max-width: 1080px;
   padding: 0 25px;
 }
+
+.Home h2 {
+  font-size: 48px;
+  font-weight: normal;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.Home span {
+  color: teal;
+}
+
+.WeatherInfo {
+  display: flex;
+  justify-content: space-between;
+}
+
+.WeatherInfo_Advanced {
+  border: 2px solid black;
+  border-left: none;
+  display: flex;
+  flex-basis: 70%;
+  padding: 30px;
+}
+
+.WeatherInfo_Basic {
+  border: 2px solid black;
+  flex-basis: 30%;
+  padding: 30px;
+  text-align: center;
+}
+
+.WeatherInfo_Extra_column {
+  flex-basis: 50%;
+}
+
+.WeatherInfo_Image {
+  font-size: 150px;
+}
+
+.WeatherInfo_Label {
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.WeatherInfo_Temp {
+  font-size: 72px;
+  margin: 0px;
+}
+
+.WeatherInfo_Type {
+  font-size: 60px;
+  margin: 0;
+  margin-bottom: 30px;
+}
