--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 }
 
 .Header nav a:hover {
-  color: green;
+  color: #64376b;
 }
 
 /* Home Styling */
@@ -29,43 +29,60 @@
   padding: 0 25px;
 }
 
-.Home h2 {
+.CityInfo {
+  text-align: center;
+}
+
+.CityInfo h2 {
   font-size: 48px;
   font-weight: normal;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 5px;
 }
 
-.Home span {
-  color: teal;
+.CityInfo h3 {
+  font-size: 45px;
+  font-weight: normal;
+  margin: 0;
+  margin-bottom: 5px;
+}
+
+.CityInfo h4 {
+  font-weight: normal;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.CityInfo span {
+  color: #64376b;
 }
 
 .WeatherInfo {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
-.WeatherInfo_Advanced {
+.WeatherInfo_Core {
   border: 2px solid black;
-  border-left: none;
+  border-right: none;
   display: flex;
-  flex-basis: 70%;
-  padding: 30px;
-}
-
-.WeatherInfo_Basic {
-  border: 2px solid black;
-  flex-basis: 30%;
+  flex-direction: column;
+  flex-basis: 40%;
   padding: 30px;
   text-align: center;
 }
 
-.WeatherInfo_Extra_column {
-  flex-basis: 50%;
+.WeatherInfo_Extra {
+  border: 2px solid black;
+  display: flex;
+  flex-basis: 60%;
+  padding: 30px;
+  text-align: center;
 }
 
 .WeatherInfo_Image {
-  font-size: 150px;
+  font-size: 100px;
 }
 
 .WeatherInfo_Label {
@@ -74,13 +91,44 @@
   letter-spacing: 2px;
 }
 
+.WeatherInfo_Split {
+  flex-basis: 50%;
+}
+
 .WeatherInfo_Temp {
   font-size: 72px;
   margin: 0px;
 }
 
 .WeatherInfo_Type {
-  font-size: 60px;
-  margin: 0;
-  margin-bottom: 30px;
+  font-size: 20px;
+  font-weight: bolder;
+  text-transform: capitalize;
+}
+
+.WeatherInfo_ImageTemp {
+}
+
+@media screen and (max-width: 640px) {
+  .CityInfo {
+    text-align: center;
+    margin-top: 5px;
+  }
+
+  .Header {
+    flex-direction: column;
+  }
+
+  .Header nav a {
+    font-size: 12px;
+  }
+
+  .WeatherInfo {
+    flex-direction: column;
+  }
+
+  .WeatherInfo_Core {
+    border: 2px solid black;
+    border-bottom: none;
+  }
 }
